[gd_scene load_steps=7 format=3 uid="uid://dwuxkddcq5ak1"]

[ext_resource type="Script" path="res://Ingame/game_objects/drop_button/drop_button.gd" id="1_kbedh"]
[ext_resource type="Texture2D" uid="uid://dtxw8py5iwtbi" path="res://Ingame/game_objects/drop_button/sprites/drop_button.png" id="2_r82m7"]
[ext_resource type="Texture2D" uid="uid://c4jenkfu0rbkw" path="res://Ingame/game_objects/drop_button/sprites/sprites/numbers.png" id="3_rwxmw"]
[ext_resource type="AudioStream" uid="uid://2pppa88uvq4v" path="res://sfx/ingame_dropbutton_countdown.wav" id="4_ffx4h"]
[ext_resource type="AudioStream" uid="uid://ctx0v46dgwmrl" path="res://sfx/ingame_dropbutton_toggle.wav" id="5_ed3bh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf1y6"]
size = Vector2(16, 16)

[node name="drop_button" type="Area2D"]
collision_layer = 0
collision_mask = 128
monitorable = false
script = ExtResource("1_kbedh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -16)
shape = SubResource("RectangleShape2D_nf1y6")
debug_color = Color(0.611765, 0.376471, 0.0352941, 0.419608)

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(8, -16)
texture = ExtResource("2_r82m7")
hframes = 3

[node name="numbers_sprite" type="Sprite2D" parent="."]
position = Vector2(8, -48)
texture = ExtResource("3_rwxmw")
centered = false
hframes = 10

[node name="numbers2_sprite" type="Sprite2D" parent="."]
position = Vector2(0, -48)
texture = ExtResource("3_rwxmw")
centered = false
hframes = 10

[node name="toggle_timer" type="Timer" parent="."]
one_shot = true

[node name="countdown_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ffx4h")
volume_db = -2.0
max_distance = 640.0
bus = &"sfx"

[node name="toggle_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ed3bh")
volume_db = 2.0
max_distance = 640.0
bus = &"sfx"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="toggle_timer" to="." method="_on_toggle_timer_timeout"]
